2025-08-07T01:41:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16792958807 # 728
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-07
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 1054 1534 / 1067 1547
* notice: next accum: outdated-unq outdated-all / unq all: 1055 1535 / 1067 1547
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-07-24] / []

2025-08-06T01:42:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16765410221 # 727
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-06
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1053 1533 / 1066 1546
* notice: next accum: outdated-unq outdated-all / unq all: 1054 1534 / 1067 1547
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-23] / [2025-08-05]

2025-08-05T01:43:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16738375277 # 726
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1052 1532 / 1065 1545
* notice: next accum: outdated-unq outdated-all / unq all: 1053 1533 / 1066 1546
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-22] / [2025-08-04]

2025-08-04T01:48:10Z: