@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-08-07T01:41:50Z",
+  "timestamp" : "2025-08-08T01:41:37Z",
   "count_outdated" : 1535,
   "uniques_outdated" : 1055,
-  "count" : 1547,
-  "uniques" : 1067,
+  "count" : 1548,
+  "uniques" : 1068,
   "clones" : [
     {
       "timestamp": "2025-07-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-26T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-08-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
