@@ -1,3 +1,12 @@
+2025-08-08T01:41:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16819847931 # 729
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-08
+* notice: last 14d: unq all: 3 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 1055 1535 / 1067 1547
+* notice: next accum: outdated-unq outdated-all / unq all: 1055 1535 / 1068 1548
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-07-25 2025-08-07]
+
 2025-08-07T01:41:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16792958807 # 728
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-07
